force-app/main/default/objects/Card__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draw Two</fullName>
            </value>
            <value>
                <fullName>Draw Four</fullName>
            </value>
            <value>
                <fullName>Reverse</fullName>
            </value>
            <value>
                <fullName>Skip</fullName>
            </value>
            <value>
                <fullName>Wild</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>