force-app/main/default/objects/Card__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>