force-app/main/default/objects/Card__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Color__c</columns>
    <columns>Value__c</columns>
    <columns>Action__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>